fixed extra horizontal space by removing vertical scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
 body {
   background-color: black;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
