--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -30,7 +30,7 @@
 .scroll-cards {
   width: 100%;
   overflow-x: scroll;
-  height: 36vh;
+  height: 310px;
 }
 
 .scroll-cards > .row {
